1) TTS object is now initialized and stored in a static variable in a sticky service which starts on application boot. 2) Changed the data Upload model. Now the Structure is INSTITUTES>instituteDocs>WORKFLOW>workflowDocs(questions in the workflow)>VISITORS> Map<String,String> storing ques ans pairs.

--- a/Visit/app/src/main/res/values/strings.xml
+++ b/Visit/app/src/main/res/values/strings.xml
@@ -131,4 +131,7 @@
     <string name="CLASS_TEXTINPUT">CLASS_TEXTINPUT</string>
     <string name="CLASS_SURVEYINPUT">CLASS_SURVEYINPUT</string>
     <string name="CLASS_THANKYOU">CLASS_THANKYOU</string>
+    <string name="collection_ref_institutes">institutes</string>
+    <string name="collection_ref_workflows">workflows</string>
+    <string name="collection_ref_visitors">visitors</string>
 </resources>
