1) Refined and added CameraModel. Camera now stores the captured image with the visitor's id name locally and passes down the URI to the activity for uploading. 2) Added Automatic voice control model for the Text Input Fragment. Issues: 1) Voice recognition continues if the user touches the screen beyond the dialog to dismiss it during recognition.

--- a/Visit/app/src/main/res/values/strings.xml
+++ b/Visit/app/src/main/res/values/strings.xml
@@ -134,4 +134,7 @@
     <string name="collection_ref_institutes">institutes</string>
     <string name="collection_ref_workflows">workflows</string>
     <string name="collection_ref_visitors">visitors</string>
+    <string name="class_type_firebase_pref">wipe</string>
+    <string name="collection_ref_photos">photos</string>
+    <string name="CLASS_CAMERA">CLASS_CAMERA</string>
 </resources>
