1) Added SignOut Activity and fragments. 2) Modified the PreferencesModel to identify the workflow intended for signOut. TODO: 1) Copy the changes in the VisitPreference App and the website.

--- a/Visit/app/src/main/res/values/strings.xml
+++ b/Visit/app/src/main/res/values/strings.xml
@@ -137,4 +137,7 @@
     <string name="class_type_firebase_pref">wipe</string>
     <string name="collection_ref_photos">photos</string>
     <string name="CLASS_CAMERA">CLASS_CAMERA</string>
+    <string name="KEY_WORKFLOW_PREF_SIGNIN_TIME">signInTime</string>
+    <string name="KEY_WORKFLOW_PREF_IS_SIGNEDOUT">isSignedOut</string>
+    <string name="KEY_WORKFLOW_DATA_IS_WORKFLOW_SIGNOUT">isWorkflowForSignOut</string>
 </resources>
