1) Changed dialog to add select button. 2) Added Cancel button. 3) Removed microphone icon. 4) Sign Out button will now appear on Welcome fragment only if some workflow is a signout workflow.

--- a/Visit/app/src/main/res/values/strings.xml
+++ b/Visit/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="KEY_WORKFLOW_PREF_SIGNIN_TIME">signInTime</string>
     <string name="KEY_WORKFLOW_PREF_IS_SIGNEDOUT">isSignedOut</string>
     <string name="KEY_WORKFLOW_DATA_IS_WORKFLOW_SIGNOUT">isWorkflowForSignOut</string>
+    <string name="KEY_WORKFLOW_PREF_SIGNOUT_TIME">signOutTime</string>
 </resources>
